--- a/PL/Views/MateriaController1/Form.cshtml
+++ b/PL/Views/MateriaController1/Form.cshtml
@@ -21,7 +21,7 @@
 
                 <div class="form-group">
                     <div class="col-md-3" style = "display: none;">
-                        @Html.LabelFor(model => model.IdMateria, new { @class = "hidden" })
+                        @Html.LabelFor(model => model.Nombre, new { @class = "hidden" })
                         @Html.TextBoxFor(model => model.IdMateria, new { @class = "hidden form-control", autocomplete = "off" })
                         @Html.ValidationMessageFor(model => model.IdMateria)
                     </div>
@@ -30,7 +30,7 @@
                     <div class="col-md-3">
                         @Html.LabelFor(model => model.Nombre)
                         <div class="input-group mb-3">
-                            <span class="input-group-text" ><i class="bi bi-rulers"></i></span>
+                            <span class="input-group-text" ><i class="bi bi-rulers" style="color: midnightblue"></i></span>
                             @Html.TextBoxFor(model => model.Nombre, new { @class = "form-control", @id = "txtNombre", @placeholder="Ejemp: Historia" })
                             @Html.ValidationMessageFor(model => model.Nombre)
                         </div>
@@ -41,7 +41,7 @@
                     <div class="col-md-3">
                         @Html.LabelFor(model => model.Costo)
                         <div class="input-group mb-3">
-                            <span class="input-group-text" id="basic-addon1" ><i class="bi bi-currency-dollar"></i></span>
+                            <span class="input-group-text" id="basic-addon1" ><i class="bi bi-currency-dollar" style="color: midnightblue"></i></span>
                             @Html.TextBoxFor(model => model.Costo, new { @class = "form-control", @id = "txtNombre", @placeholder="MXN" })
                             @Html.ValidationMessageFor(model => model.Costo)
                         </div>
@@ -51,7 +51,7 @@
                     <div class="col-md-3">
                         @Html.Label("Semestre")
                         <div class="input-group mb-3">
-                            <span class="input-group-text" id="basic-addon1" ><i class="bi bi-journal-text"></i></span>
+                            <span class="input-group-text" id="basic-addon1" ><i class="bi bi-journal-text" style="color: midnightblue"></i></span>
                             @Html.DropDownListFor(model => model.Semestre.IdSemestre, new SelectList(Model.Semestre.Semestres, "IdSemestre", "Nombre"), "Selecciona un semestre", new { @class = "form-control" })
                             @Html.ValidationMessageFor(model => model.Semestre.IdSemestre)
                         </div>
@@ -62,25 +62,162 @@
                     <div class="col-md-3">
                         @Html.LabelFor(model => model.Creditos)
                         <div class="input-group mb-3">
-                            <span class="input-group-text" id="basic-addon1">#</span>
+                            <span class="input-group-text" id="basic-addon1" style="color: midnightblue">#</span>
                             @Html.TextBoxFor(model => model.Creditos, new { @class = "form-control", @id = "txtNombre" })
                         </div>
                     </div>
                 </div>
+                <div class="col-md-3">
+                            @Html.Label("País")
+                            @if (Model.Direccion.Colonia.Municipio.Estado.Pais.Paises == null)
+                            {
+                                @Html.DropDownListFor(model => model.Direccion.Colonia.Municipio.Estado.Pais.IdPais, new SelectList(string.Empty, "Value", "Text"), "Selecciona un Pais", htmlAttributes: new { id = "ddlPais", @class = "form-control" })
+                                @Html.ValidationMessageFor(model => model.Direccion.Colonia.Municipio.Estado.Pais.IdPais, null, new { @class = "text-danger" })
+                            }
+                            else
+                            {
+                                @Html.DropDownListFor(model => model.Direccion.Colonia.Municipio.Estado.Pais.IdPais, new SelectList(Model.Direccion.Colonia.Municipio.Estado.Pais.Paises, "IdPais", "Nombre"), "Selecciona un país", htmlAttributes: new { id = "ddlPais", @class = "form-control" })
+                                @Html.ValidationMessageFor(model => model.Direccion.Colonia.Municipio.Estado.Pais.IdPais, null, new { @class = "text-danger" })
+                            }
+                </div>
+                <br>
+                <div class="col-md-3">
+                            @Html.Label("Estado")
+                            @if (Model.Direccion.Colonia.Municipio.Estado.Estados == null)
+                            {
+                                @Html.DropDownListFor(model => model.Direccion.Colonia.Municipio.Estado.IdEstado, new SelectList(string.Empty, "Value", "Text"), "Selecciona un Estado", htmlAttributes: new { id = "ddlEstado", @class = "form-control" })
 
+                            }
+                            else
+                            {
+                                @Html.DropDownListFor(model => model.Direccion.Colonia.Municipio.Estado.IdEstado, new SelectList(Model.Direccion.Colonia.Municipio.Estado.Estados, "IdEstado", "Nombre"), "Selecciona un Estado", htmlAttributes: new { id = "ddlEstado", @class = "form-control" })
+                            }
+                </div>
+                <br>
+                <div class="col-md-3">
+                                @Html.Label("Municipio")
+                                @if (Model.Direccion.Colonia.Municipio.Municipios == null)
+                                {
+                                    @*model.Categoria.IdCategoria*@
+                                    @Html.DropDownListFor(model => model.Direccion.Colonia.Municipio.IdMunicipio, new SelectList(string.Empty, "Value", "Text"), "Selecciona un Municipio", htmlAttributes: new { id = "ddlMunicipio", @class = "form-control" })
 
+                                }
+                                else
+                                {
+                                    @Html.DropDownListFor(model => model.Direccion.Colonia.Municipio.IdMunicipio, new SelectList(Model.Direccion.Colonia.Municipio.Municipios, "IdMunicipio", "Nombre"), "Selecciona un Municipio", htmlAttributes: new { id = "ddlMunicipio", @class = "form-control" })
+                                }
+                </div>
+                <br>
+                <div class="col-md-3">
+                            @Html.Label("Colonia")
+                             @if (Model.Direccion.Colonia.Colonias == null)
+                            {
+                                @*model.Categoria.IdCategoria*@
+                                @Html.DropDownListFor(model => model.Direccion.Colonia.IdColonia, new SelectList(string.Empty, "Value", "Text"), "Selecciona una Colonia", htmlAttributes: new { id = "ddlColonia", @class = "form-control" })
+
+                            }
+                            else
+                            {
+                                @Html.DropDownListFor(model => model.Direccion.Colonia.IdColonia, new SelectList(Model.Direccion.Colonia.Colonias, "IdColonia", "Nombre"), "Selecciona una Colonia", htmlAttributes: new { id = "ddlColonia", @class = "form-control" })
+                            }
+                </div>
+                <br>
 
                 <div class="form-group">
                     <div class="col-md-3">
                         <input type="submit" value="Guardar" class="btn btn-success" />
                         @Html.ActionLink("Regresar", "GetAll", "MateriaController1", htmlAttributes: new { @class = "btn btn-danger" })
                     </div>
-                </div>
+                </div>                  
             </div>
 
             }
         </div>
     </div>
 </div>
+@section Scripts
+{
 
+<script src="~/lib/jquery/dist/jquery.js"></script>
+<script type="text/javascript">
+
+      function Previsualizar(input) {
+        if (input.files && input.files[0]) {
+            var reader = new FileReader();
+            reader.onload = function (e) {
+                $('#ImagenPreview').attr('src', e.target.result);
+            };
+            reader.readAsDataURL(input.files[0]);
+        }
+    }
+
+    $(document).ready(function () {
+        $("#ddlPais").change(function () {
+            $("#ddlEstado").empty();
+            $.ajax({
+                type: 'POST',
+                url: '@Url.Action("GetEstado")',
+                dataType: 'json',
+                data: { IdPais: $("#ddlPais").val() },
+                success: function (estados) {
+                    $("#ddlEstado").append('<option value="0">' + 'Seleccione una opción' + '</option>');
+                    $.each(estados, function (i, estados) {
+                        $("#ddlEstado").append('<option value="'
+                                                   + estados.idEstado + '">'
+                                                   + estados.nombre + '</option>');
+                    });
+                },
+                error: function (ex) {
+                    alert('Failed.' + ex);
+                }
+            });
+        });
+
+       $("#ddlEstado").change(function () {
+            $("#ddlMunicipio").empty();
+            $.ajax({
+                type: 'POST',
+                url: '@Url.Action("GetMunicipio")',
+                dataType: 'json',
+                data: { IdEstado: $("#ddlEstado").val() },
+                success: function (municipios) {
+                    $("#ddlMunicipio").append('<option value="0">' + 'Seleccione una opción' + '</option>');
+                    $.each(municipios, function (i, municipios) {
+                        $("#ddlMunicipio").append('<option value="'
+                                                   + municipios.idMunicipio + '">'
+                                                   + municipios.nombre + '</option>');
+                    });
+                },
+                error: function (ex) {
+                    alert('Failed.' + ex);
+                }
+            });
+       });
+
+        $("#ddlMunicipio").change(function () {
+            $("#ddlColonia").empty();
+            $.ajax({
+                type: 'POST',
+                url: '@Url.Action("GetColonia")',
+                dataType: 'json',
+                data: { IdMunicipio: $("#ddlMunicipio").val() },
+                success: function (colonias) {
+                    $("#ddlColonia").append('<option value="0">' + 'Seleccione una opción' + '</option>');
+                    $.each(colonias, function (i, colonias) {
+                        $("#ddlColonia").append('<option value="'
+                                                   + colonias.idColonia + '">'
+                                                   + colonias.nombre + '</option>');
+                    });
+                },
+                error: function (ex) {
+                    alert('Failed.' + ex);
+                }
+            });
+
+        });
+
+    });
+
+</script>
+}
 
