--- a/PL/Views/MateriaController1/Form.cshtml
+++ b/PL/Views/MateriaController1/Form.cshtml
@@ -90,6 +90,30 @@
                     </div>
                 </div>
 
+                <div class="col-md-3">
+
+                        @Html.LabelFor(model=> model.Imagen)
+
+                        <div class="input-group mb-3">
+                            <span class="input-group-text" id="basic-addon1"><i class="bi bi-card-image"></i></span>
+                            <input type='file' class="form-control" name="fuImage" onchange="readURL(this);" />
+                        </div>
+
+                        @if (Model.Imagen != null)
+                        {
+
+                            <img id="Img" src="data:image/*;base64,Model.Imagen" style="width:auto ; height:100px" />
+
+                        }
+                        else
+                        {
+                            <img id="Img" src="~/Images/sinimagen.png" style="width:auto ; height:100px" />
+                        }
+
+
+                    </div>
+                    @Html.HiddenFor(model => model.Imagen)
+
                 <div class="form-group">
                     <div class="col-md-3">
                         <input type="submit" value="Guardar" class="btn btn-success" />
@@ -131,6 +155,21 @@ $(document).ready(function () {
         });
 
     });
+
+
+    function readURL(input) {
+        if (input.files && input.files[0]) {
+            var reader = new FileReader();
+
+            reader.onload = function (e) {
+                $('#Img')
+                  .attr('src', e.target.result);
+
+            };
+
+            reader.readAsDataURL(input.files[0]);
+        }
+    }
 </script>
 }
 
