--- a/PL/Views/MateriaController1/Form.cshtml
+++ b/PL/Views/MateriaController1/Form.cshtml
@@ -4,29 +4,29 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div class="container">
+@*<div class="container">*@
     <div class="row">
         <div class="col-md-12">
             <h2>Materia</h2>
             <h5>Ingrese los datos de la materia:</h5>
         </div>
     </div>
+</hr>
 
-
-    <div class="row">
-        <div class="col-md-12">
+    <form class="row g-3">
+       @* <div class="col-md-12">*@
             @using (Html.BeginForm("Form", "MateriaController1", FormMethod.Post, new { enctype = "multipart/form-data" }))
             {
-            <div class="form-horizontal">
+            @*<div class="form-horizontal">*@
 
-                <div class="form-group">
+                @*<div class="form">*@
                     <div class="col-md-3" style = "display: none;">
                         @Html.LabelFor(model => model.Nombre, new { @class = "hidden" })
                         @Html.TextBoxFor(model => model.IdMateria, new { @class = "hidden form-control", autocomplete = "off" })
                         @Html.ValidationMessageFor(model => model.IdMateria)
                     </div>
-                </div>
-                <div class="form-group">
+                @*</div>*@
+                @*<div class="form">*@
                     <div class="col-md-3">
                         @Html.LabelFor(model => model.Nombre)
                         <div class="input-group mb-3">
@@ -35,18 +35,8 @@
                             @Html.ValidationMessageFor(model => model.Nombre)
                         </div>
                     </div>
-                </div>
+               @* </div>*@
 
-                <div class="form-group">
-                    <div class="col-md-3">
-                        @Html.LabelFor(model => model.Costo)
-                        <div class="input-group mb-3">
-                            <span class="input-group-text" id="basic-addon1" ><i class="bi bi-currency-dollar" style="color: midnightblue"></i></span>
-                            @Html.TextBoxFor(model => model.Costo, new { @class = "form-control", @id = "txtNombre", @placeholder="MXN" })
-                            @Html.ValidationMessageFor(model => model.Costo)
-                        </div>
-                    </div>
-                </div>
                 <div class="form-group">
                     <div class="col-md-3">
                         @Html.Label("Semestre")
@@ -56,27 +46,68 @@
                             @Html.ValidationMessageFor(model => model.Semestre.IdSemestre)
                         </div>
                     </div>
+                    <div class="col-md-2">
+                        @Html.LabelFor(model => model.Costo)
+                        <div class="input-group mb-3">
+                            <span class="input-group-text" id="basic-addon1" ><i class="bi bi-currency-dollar" style="color: midnightblue"></i></span>
+                            @Html.TextBoxFor(model => model.Costo, new { @class = "form-control", @id = "txtNombre", @placeholder="MXN" })
+                            @Html.ValidationMessageFor(model => model.Costo)
+                        </div>
+                    </div>
                 </div>
+                @*<div class="form-group">*@
+                    
+                @*</div>*@
+                
 
-                <div class="form-group">
-                    <div class="col-md-3">
+                @*<div class="form-group">*@
+                    <div class="col-md-2">
                         @Html.LabelFor(model => model.Creditos)
                         <div class="input-group mb-3">
                             <span class="input-group-text" id="basic-addon1" style="color: midnightblue">#</span>
                             @Html.TextBoxFor(model => model.Creditos, new { @class = "form-control", @id = "txtNombre" })
                         </div>
                     </div>
-                </div>
-                <div class="form-group">
+                @*</div>*@
+                @*<div class="form-group">*@
+                     <div class="col-md-3">
+
+                        @Html.LabelFor(model=> model.Imagen)
+
+                        <div class="input-group mb-3">
+                            <span class="input-group-text" id="basic-addon1"><i class="bi bi-card-image" ></i></span>
+                            <input id="fuImage" type='file' class="form-control" name="fuImage" onchange="validateFile(this), readURL(this);  " />
+                        </div>
+
+                        @if (Model.Imagen != null )
+                        {
+
+                            <img id="Img" src="data:image/*;base64,@Model.Imagen" style="width:250px ; height:250px" />
+
+                        }
+                        else
+                        {
+                            <img id="Img" src="~/Images/sinimagen.png" style="width:250px ; height:250px" />
+                        }
+
+
+                    </div>
+                    @Html.HiddenFor(model => model.Imagen)
+
                     <div class="col-md-3">
-                        @Html.LabelFor(model => model.Grupo.Plantel.Planteles)                      
+                        @Html.LabelFor(model => model.Grupo.Plantel.Planteles)   
+                        <div class="input-group mb-3">
+                             <span class="input-group-text" id="basic-addon1" ><i class="bi bi-building " style="color: midnightblue"></i></span>
                         @Html.DropDownListFor(model => model.Grupo.Plantel.IdPlantel, new SelectList(Model.Grupo.Plantel.Planteles, "IdPlantel", "Nombre"), "Selecciona un plantel", new { @class = "form-control", @id = "ddlPlantel" })
                         @Html.ValidationMessageFor(model => model.Grupo.Plantel.IdPlantel)
+                        </div>
                     </div>
-                </div>
-                 <div class="form-group">
-                    <div class="col-md-3">
+
+                @*</div>*@
+                    <div class="col-md-4">
                         @Html.LabelFor(model => model.Grupo.Grupos)  
+                         <div class="input-group mb-3">
+                             <span class="input-group-text" id="basic-addon1" ><i class="bi bi-calendar-plus-fill" style="color: midnightblue"></i></span>
                         @if (Model.Grupo.Grupos == null)
                             {
                                 @Html.DropDownListFor(model => model.Grupo.IdGrupo, new SelectList(string.Empty, "Value", "Text"), "Selecciona un grupo", new { @class = "form-control", @id = "ddlGrupo" })
@@ -87,32 +118,10 @@
                                 @Html.DropDownListFor(model => model.Grupo.IdGrupo, new SelectList(Model.Grupo.Grupos, "IdGrupo", "Horario"), "Selecciona un grupo", new { @class = "form-control", @id = "ddlGrupo" })
                                 @Html.ValidationMessageFor(model => model.Grupo.IdGrupo)
                             }
-                    </div>
-                </div>
-
-                <div class="col-md-3">
-
-                        @Html.LabelFor(model=> model.Imagen)
-
-                        <div class="input-group mb-3">
-                            <span class="input-group-text" id="basic-addon1"><i class="bi bi-card-image"></i></span>
-                            <input type='file' class="form-control" name="fuImage" onchange="readURL(this);" />
                         </div>
-
-                        @if (Model.Imagen != null)
-                        {
-
-                            <img id="Img" src="data:image/*;base64,Model.Imagen" style="width:auto ; height:100px" />
-
-                        }
-                        else
-                        {
-                            <img id="Img" src="~/Images/sinimagen.png" style="width:auto ; height:100px" />
-                        }
-
-
                     </div>
-                    @Html.HiddenFor(model => model.Imagen)
+
+               
 
                 <div class="form-group">
                     <div class="col-md-3">
@@ -120,12 +129,12 @@
                         @Html.ActionLink("Regresar", "GetAll", "MateriaController1", htmlAttributes: new { @class = "btn btn-danger" })
                     </div>
                 </div>                  
-            </div>
+           @* </div>*@
 
             }
-        </div>
-    </div>
-</div>
+        @*</div>*@
+    </form>
+@*</div>*@
 @section Scripts
 {
 
@@ -170,6 +179,28 @@ $(document).ready(function () {
             reader.readAsDataURL(input.files[0]);
         }
     }
+
+   function validateFile() 
+        {
+            var allowedExtension = ['jpeg', 'jpg'];
+            var fileExtension = document.getElementById('fuImage').value.split('.').pop().toLowerCase();
+            var isValidFile = false;
+
+                for(var index in allowedExtension) {
+
+                    if(fileExtension === allowedExtension[index]) {
+                        isValidFile = true; 
+                        break;
+                    }
+                }
+
+                if(!isValidFile) {
+                    alert('Las extensiones permitidas son : *.' + allowedExtension.join(', *.'));
+                    document.getElementById('fuImage').value = ""
+                }
+
+                return isValidFile;
+        }
 </script>
 }
 
