--- a/PL/Views/CargaMasiva/MateriaCargaMasiva.cshtml
+++ b/PL/Views/CargaMasiva/MateriaCargaMasiva.cshtml
@@ -12,7 +12,7 @@
 
     <div class="row">
         <div class="col-md-6">
-            <a><input type="submit" value="Excel" class="btn btn-success col-md-12" id="xlsx" "  /></a>
+            <a><input type="submit" value="Excel" class="btn btn-success col-md-12" id="xlsx"/></a>
         </div>
         <div class="col-md-6">
             <a><input type="submit" value="TXT" class="btn btn-primary col-md-12" id="txt" /></a>
@@ -40,7 +40,7 @@
         {
         <div class="row g-3">
             <div class="col-md-1">
-                <a><input type="submit" value="Insertar" class="btn btn-success" /></a>
+                <a><input type="submit" value="Insertar" class="btn btn-success"/></a>
                 <br />
             </div>
         </div>
@@ -54,6 +54,7 @@
     <div class="col-md-12">
         @if (Model.Objects != null)
         {
+        @if(Model.Objects.Count > 0 ){
         <table class="table table-bordered table-responsive">
             <thead>
                 <tr class="text-center">
@@ -71,6 +72,11 @@
                 }
             </tbody>
         </table>
+        }
+        }
+        else
+        {
+
         }
     </div>
 </div>
