--- a/PL/Views/MateriaController1/Form.cshtml
+++ b/PL/Views/MateriaController1/Form.cshtml
@@ -4,7 +4,6 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-@*<div class="container">*@
 <div class="row">
     <div class="col-md-12">
         <h2>Materia</h2>
@@ -13,31 +12,20 @@
 </div>
 </hr>
 
-<form class="row g-3">
-    @* <div class="col-md-12">*@
     @using (Html.BeginForm("Form", "MateriaController1", FormMethod.Post, new { enctype = "multipart/form-data" }))
     {
-        @*<div class="form-horizontal">*@
-
-        @*<div class="form">*@
+        <div class="row">
         <div class="col-md-3" style="display: none;">
-            @Html.LabelFor(model => model.Nombre, new { @class = "hidden" })
             @Html.TextBoxFor(model => model.IdMateria, new { @class = "hidden form-control", autocomplete = "off" })
-            @Html.ValidationMessageFor(model => model.IdMateria)
         </div>
-        @*</div>*@
-        @*<div class="form">*@
         <div class="col-md-3">
             @Html.LabelFor(model => model.Nombre)
             <div class="input-group mb-3">
                 <span class="input-group-text"><i class="bi bi-rulers" style="color: midnightblue"></i></span>
                 @Html.TextBoxFor(model => model.Nombre, new { @class = "form-control", @id = "txtNombre", @placeholder="Ejemp: Historia" })
-                @Html.ValidationMessageFor(model => model.Nombre)
+                @Html.ValidationMessageFor(model => model.Nombre, null, new { @class = "text-danger"})
             </div>
         </div>
-        @* </div>*@
-
-        <div class="form-group">
             <div class="col-md-3">
                 @Html.Label("Semestre")
                 <div class="input-group mb-3">
@@ -54,22 +42,13 @@
                     @Html.ValidationMessageFor(model => model.Costo)
                 </div>
             </div>
-        </div>
-        @*<div class="form-group">*@
-
-        @*</div>*@
-
-
-        @*<div class="form-group">*@
         <div class="col-md-2">
             @Html.LabelFor(model => model.Creditos)
             <div class="input-group mb-3">
                 <span class="input-group-text" id="basic-addon1" style="color: midnightblue">#</span>
-                @Html.TextBoxFor(model => model.Creditos, new { @class = "form-control", @id = "txtNombre" })
+                @Html.TextBoxFor(model => model.Creditos, new { @class = "form-control", @id = "txtCreditos", @onkeypress = "return SoloNumeros(this)"  })
             </div>
         </div>
-        @*</div>*@
-        @*<div class="form-group">*@
         <div class="col-md-3">
 
             @Html.LabelFor(model=> model.Imagen)
@@ -102,8 +81,6 @@
                 @Html.ValidationMessageFor(model => model.Grupo.Plantel.IdPlantel)
             </div>
         </div>
-
-        @*</div>*@
         <div class="col-md-4">
             @Html.LabelFor(model => model.Grupo.Grupos)
             <div class="input-group mb-3">
@@ -129,12 +106,9 @@
                 @Html.ActionLink("Regresar", "GetAll", "MateriaController1", htmlAttributes: new { @class = "btn btn-danger" })
             </div>
         </div>
-        @* </div>*@
-
+        </div>
     }
-    @*</div>*@
-</form>
-@*</div>*@
+
 @section Scripts
 {
 
@@ -201,6 +175,7 @@
 
                     return isValidFile;
             }
+
 </script>
 }
 
