--- a/PL/Views/MateriaController1/GetAll.cshtml
+++ b/PL/Views/MateriaController1/GetAll.cshtml
@@ -15,16 +15,33 @@
 </hr>
 
 <div style="float:right;">
-    @Html.ActionLink("Agregar", "Form", "MateriaController1", htmlAttributes: new { @class = "btn btn-success" })
-
+    @Html.ActionLink("+", "Form", "MateriaController1", htmlAttributes: new { @class = "btn btn-success" })
 </div>
 
-<table class="table table-bordered table-responsive">
+ @using (Html.BeginForm("GetAll", "MateriaController1", FormMethod.Post, new { enctype = "multipart/form-data" }))
+ {
+<div class="row">
+    <div class ="col-md-3">
+         @Html.DropDownListFor(model => model.Semestre.IdSemestre, new SelectList(Model.Semestre.Semestres, "IdSemestre", "Nombre"), "Selecciona un semestre", new { @class = "form-control bg-light text-dark" })
+    </div> 
+    <div class ="col-md-3">
+         @Html.TextBoxFor(model => model.Nombre, new { @class = "form-control bg-light text-dark", placeholder = "Nombre" })
+    </div> 
+    <div class ="col-md-3">
+         @Html.TextBoxFor(model => model.Grupo.Horario, new { @class = "form-control bg-light text-darke", placeholder = "Turno" })
+    </div> 
+    <div class ="col-md-1">
+         <input type="submit" value="Buscar" class="btn btn-secondary text-light" />
+    </div> 
+</div>
+}
+<br />
+<table class="table  table-dark table-hover table-striped table-bordered table-responsive">
     <thead>
-        <tr>
+        <tr class="table-secondary">
             <td>Editar</td>
             <td style ="display :none;">id</td>
-            <td>Nombre</td>
+            <td >Nombre</td>
             <td>Creditos</td>
             <td>Costo</td>
             <td>Semestre</td>
@@ -39,20 +56,20 @@
         <tr>
             <td><a class="btn btn-warning glyphicon glyphicon-edit" href="@Url.Action("Form", "MateriaController1", new { IdMateria = materia.IdMateria })"></a></td>
             <td style ="display :none;">@materia.IdMateria </td>
-            <td>@materia.Nombre </td>
+            <td>@materia.Nombre</td>
             <td>@materia.Creditos</td>
             <td>@materia.Costo</td>
             <td>@materia.Semestre.IdSemestre</td>
-            @if (materia.Imagen != null)
+             @if (materia.Imagen != "")
              {
-                <td><img src="data:image/*;base64,@materia.Imagen" style="width:70px ; height:70px" /></td>
+                <td style ="text-align: center; vertical-align: middle;"><img src="data:image/*;base64,@materia.Imagen" style="width:50px ; height:50px" /></td>
               }
               else
               {
                             
-                  <td><img src="~/Images/sinimagen.png" width="70px" height="70px" id="Img" /></td>
+                  <td style ="text-align: center; vertical-align: middle;"><img src="~/Images/sinimagen.png" width="50px" height="50px" id="Img" /></td>
               }
-             <td>
+             <td style ="text-align: center; vertical-align: middle;">
                  @if(materia.Status == true)   
                  {
                  <a href="@Url.Action("UpdateStatus", "MateriaController1", new { IdMateria = materia.IdMateria })"> <img src="~/Images/ON.png" style=" height:25px; width:50px;" /></a>
